# Learning-By-Doing

./: .gitignore  package-lock.json  package.json  tsconfig.base.json
.superpowers/brainstorm/81525-1774625995/: .server-stopped  01-style-direction.html  02-site-entry.html  03-app-layout.html  04-entry-state.html  05-ai-panel-mode.html  07-approaches.html  08-design-section-1.html
.superpowers/brainstorm/94378-1774632742/: .server-stopped  09-design-section-2.html  10-design-section-2-revised.html  11-editor-research.html  12-design-section-3.html
apps/admin/: package.json  tsconfig.json
apps/admin/app/: actions.ts  error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/admin/lib/: actions.test.ts  admin-data.test.ts  admin-data.ts  admin-presentation.test.ts  admin-presentation.ts
apps/api/: pyproject.toml
apps/api/app/: current_user.py  main.py  schemas.py  services.py  settings.py
apps/api/app/routers/: admin.py  ai.py  auth.py  content.py  exercise.py  imports.py  progress.py  run.py  runner_support.py  studio.py
apps/api/tests/: conftest.py  test_admin.py  test_app.py  test_content.py  test_health.py  test_learner_state.py  test_run.py  test_run_integration.py  test_studio.py
apps/runner/: pyproject.toml
apps/runner/app/: executor.py  main.py  policy.py
apps/runner/tests/: test_runner.py  test_runner_api.py
apps/web/: package.json  proxy.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: path-card.tsx  (+6 more)
docs/: AUTOMATION_TODO.md  SESSION_PROGRESS.md
skills/learning-content-pipeline/: SKILL.md
(+18 files in other folders)
