[project]
name = "learning-api"
version = "0.1.0"
description = "FastAPI backend for the learning platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.135.2",
  "uvicorn==0.42.0",
  "pydantic==2.12.5",
  "sqlalchemy==2.0.48",
  "redis==7.4.0",
  "httpx==0.28.1",
  "python-multipart>=0.0.20"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio>=0.25.3",
  "anyio>=4.9.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
